# CloudMAV

./: .gitignore  .gitmodules  LICENSE  README.md  wifideck.c
client/: cameraclient.py  client.py  keyboard_control.py
cloud-deck/: .gitignore  CMakeLists.txt  sdkconfig.defaults
cloud-deck/include/: uart_transport.h
cloud-deck/main/: CMakeLists.txt  cam.c  cam.h  cpx.c  cpx.h  crtp.h  esp_transport.c  esp_transport.h  idf_component.yml  main.c  router.c  router.h  server.c  server.h  tcpserver.c  uart_transport.c  uart_transport.h  websocket.c  websocket.h  wifi.c
cloud-deck/src/: cpx.c  main.c  mcu_transport.c  router.c  uart_transport.c
deck-test/: platformio.ini
deck-test/include/: cpx.h  esp_transport.h  router.h  uart_transport.h
deck-test/lib/cpx/: cpx.c  cpx.cpp
deck-test/lib/router/: router.cpp  router.h
deck-test/lib/uart_transport/: uart_transport.cpp  uart_transport.h
deck-test/src/: esp_transport.cpp  main.cpp  router.cpp  uart_transport.cpp
deck-test/test/: test_events.cpp
esp-test/: CMakeLists.txt
results/: combined_connection_manual_control.mov  hover.mov  working-video-stream.txt
results/working-wireshark/: client.txt  wireshark.txt
scripts/: cam_socket_test.py  cam_tcp_test.py  cam_ws_test.py  crtp_ws_test.py  frame_generator_test.py  radio_takeoff.py  socket_test.py  tcp_client.py  tcp_cpx_test.py  tcp_crtp_test.py  ws_test.py
tools/find-mac/: CMakeLists.txt
tools/find-mac/main/: main.c
